Added location map

--- a/index.html
+++ b/index.html
@@ -28,7 +28,21 @@ title: Webcamp Ljubljana 2016
 	<p>Tickets will be available after 15 February 2016. <b>We'll announce them only on the mailing list.</b><br /> Make sure you subscribe.</p>
 	<p><a href="http://eepurl.com/8f5HT" target="_blank">Subscribe to the announcements mailing list.</a></p>
 
-	<p>If you are a current student of Faculty of Computer and Information Science, you can get a ticket by emailing us at info@webcamp.si.</div>
+	<p>If you are a current student of Faculty of Computer and Information Science, you can get a ticket by emailing us at info@webcamp.si.</p>
+
+
+	<p class="content">We thank the <a href="http://www.fri.uni-lj.si/en/about/">Faculty of Computer and Information Science in Ljubljana</a> for hosting us. <br/>
+		<strong>The Faculty is a leading research and teaching institution for information sciences</strong> with several active research groups and distinguished alumni.
+	<br /><br />
+	<a href="http://www.fri.uni-lj.si/en/about/how_to_reach_us/">Detailed instructions on getting to the Faculty building</a>
+	</br ><br />
+	If you are arriving by car, you can park on the either side of the Faculty building.
+	</p>
+		<div id="disapear-on-click" class="location-zoom">
+			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2769.021058795885!2d14.472292399999999!3d46.0506782!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47652d52dfb93cd7%3A0xbfcd354b74411729!2sVe%C4%8Dna+pot+113%2C+1000+Ljubljana!5e0!3m2!1sen!2ssi!4v1408359697852" frameborder="0" style="border:0; width: 100%;
+			height: 400px;"></iframe>
+		</div>
+</div>
 
 <!--
 <div id="iot" class="section">
