--- a/index.html
+++ b/index.html
@@ -555,6 +555,16 @@ title: Webcamp Ljubljana 2016
 			Pivovarna Pelicon focuses on the quality and creativity during the development of new beer recipes. They strive to continuously improve to get people excited about their the craft beer offering.
 		</div>
 	</div>
+
+
+	<div class="row sponsors-buna">
+		<div class="col-md-4">
+			<a href="http://impact.si/" class="sponsor-logo"><img src="/assets/images/impact.png" /></a>
+		</div>
+		<div class="col-md-8">
+			<a href="http://impact.si/">Zavod ImpACT</a> is an association that wishes to end the area of bad presentations and build on public speaking skills of youth, startups, organizations and trainers. We give you support, guidance and feedback on your presentation to make you more confident on stage and make your presentation bettter than ever. We deliver public speaking and communication courses and training sessions for startups and other organizations, that want to boost their communication skills. Our vision is that people would follow their passion in their professional life, contribute to society and step out of their comfort zones.
+		</div>
+	</div>
 </div>
 
 <div id="partners" class="section">
