added team anchor

--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@ title: Webcamp Ljubljana 2016
 				<br /><br />
 	    </p>
 		</div>
-		<div class="col-md-6">
+		<div class="col-md-6" id="team">
 			<h1>Team</h1>
 			<ul class="list-unstyled">
 				<li>Mojca Berce</li>
