Add sold out note

--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@ title: Webcamp Ljubljana 2016
 	<p>
 		<b>When:</b> 12th March 2016<br />
 		<b>Where:</b> Faculty of Computer and Information Science, Ljubljana<br />
-		<b>Cost:</b> free, but you need a ticket<br />
+		<b>Cost:</b> free, but you need a ticket. <strong>WebCamp 2016 is SOLD OUT</strong><br />
 	</p>
 
-	<p>Tickets will be available after 15 February 2016. <b>We'll announce them only on the mailing list.</b><br /> Make sure you subscribe.</p>
-	<p><a href="http://eepurl.com/8f5HT" target="_blank">Subscribe to the announcements mailing list.</a></p>
+	<!-- <p>Tickets will be available after 15 February 2016. <b>We'll announce them only on the mailing list.</b><br /> Make sure you subscribe.</p> -->
+	<p><a href="http://eepurl.com/8f5HT" target="_blank">Subscribe to the announcements mailing list for the next year.</a></p>
 
 	<p>If you are a current student of Faculty of Computer and Information Science, you can get a ticket by emailing us at info@webcamp.si.</p>
 
 
 	<p class="content">We thank the <a href="http://www.fri.uni-lj.si/en/about/">Faculty of Computer and Information Science in Ljubljana</a> for hosting us. <br/>
-		<strong>The Faculty is a leading research and teaching institution for information sciences</strong> with several active research groups and distinguished alumni.
+
 	<br /><br />
 	<a href="http://www.fri.uni-lj.si/en/about/how_to_reach_us/">Detailed instructions on getting to the Faculty building</a>
-	</br ><br />
+	<br /><br />
 	If you are arriving by car, you can park on the either side of the Faculty building.
 	</p>
 		<div id="disapear-on-click" class="location-zoom">
@@ -364,7 +364,7 @@ title: Webcamp Ljubljana 2016
 				<p class="schedule-grey">18.00</p>
 			</div>
 			<div class="col-xs-12 col-sm-10 ">
-				<p class="schedule-red"><strong>Party at <a href="http://www.stapotovanja.com/sta/sta-travel-cafe">STA Travel Cafe!</a></strong></p>
+				<p class="schedule-red"><strong>Party at <a href="http://www.stapotovanja.com/sta/sta-travel-cafe">STA Travel Cafe!</a> Sponsored by Toptal.</strong></p>
 			</div>
 		</div>
 	</div><!-- end div container-fluid -->
