--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@ title: Webcamp Ljubljana 2016
 			<a href="https://reciprocitylabs.com/" class="sponsor-logo"><img src="/assets/images/reciprocity.png" /></a>
 		</div>
 		<div class="col-md-12">
-			<p><a href="https://reciprocitylabs.com/">Reciprocity's</a> SaaS product, ZenGRC, helps companies manage their ever growing compliance needs. The compliance market is 5 billion per year and growing fast. Our customers include Google, Uber, Airbnb, Apple, Salesforce, Square and more. We are competing against spreadsheets and old-school $1M and up enterprise solutions. Our team works and plays in San Francisco, Ljublijana, and Novi Sad.</p>
+			<p><a href="https://reciprocitylabs.com/">Reciprocity's</a> SaaS product, ZenGRC, helps companies manage their ever growing compliance needs. The compliance market is 5 billion per year and growing fast. Our customers include Google, Uber, Airbnb, Salesforce, Square and more. We are competing against spreadsheets and old-school $1M and up enterprise solutions. Our team works and plays in San Francisco, Ljublijana, and Novi Sad.</p>
 		</div>
 	</div>
 
